# transit-screen

./: .env.example  .gitignore  .gitmodules  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt  run.sh  sandbox.ipynb  sandbox.py  transit-screen.service  transit.py
lib/waveshare_epd/: epdconfig.py
scripts/: debug_apis.py  force_refresh.sh  inspect_raw_transit.py  reset.sh  setup-pi.sh  sleep_screen.sh  start.sh  stop.sh  test.py  test_layouts.py
transit_screen/: config.py  display.py  main.py  transit.py  weather.py
transit_screen/display/: __init__.py  point_in_time.py  timeline_7day.py  timeline_hourly.py  utils.py
wheels/: README.md
