[project]
name = "transit-screen"
version = "0.1.0"
description = "E-ink transit and weather display for Raspberry Pi Zero W"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pillow",
  "requests",
  "python-dotenv",
  "python-dateutil",
  "spidev; sys_platform == 'linux'",
  "RPi.GPIO; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.uv]
# Use PyPI by default, but provide piwheels as fallback for Pi wheels
find-links = ["./wheels"]
# Resolve for current platform first, fall back to piwheels for Linux
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
